# wlroots-glib

./: meson.build
protocols/: meson.build
src/: Wlroots-0.1.metadata  meson.build  pointer-table.c  pointer-table.h  wlroots-backend.c  wlroots-backend.h  wlroots-box.c  wlroots-box.h  wlroots-compositor.c  wlroots-compositor.h  wlroots-cursor.c  wlroots-cursor.h  wlroots-data-device-manager.c  wlroots-data-device-manager.h  wlroots-enum-types.c.in  wlroots-enum-types.h.in  wlroots-events.c  wlroots-events.h  wlroots-glib-version.h.in  wlroots-glib.h  wlroots-input-device.c  wlroots-input-device.h  wlroots-matrix.c  wlroots-matrix.h  wlroots-output-layout.c  wlroots-output-layout.h  wlroots-output-transform.c  wlroots-output-transform.h  wlroots-output.c  wlroots-output.h  wlroots-renderer.c  wlroots-renderer.h  wlroots-seat-keyboard-state.c  wlroots-seat-keyboard-state.h  wlroots-seat.c  wlroots-seat.h  wlroots-surface-state.c  wlroots-surface-state.h  wlroots-surface.c  wlroots-surface.h  (+14 more)
